--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
           </div>
           <div class="input-group">
             <i data-feather="phone"></i>
-            <input type="number" placeholder="Mobile Number" />w
+            <input type="number" placeholder="Mobile Number" />
           </div>
           <button type="submit" class="btn">Submit</button>
         </form>
