--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       <a href="index.html" class="navbar-logo">Anarchist<span>Store</span></a>
       <!-- Navbar Menu Start -->
       <div class="navbar-nav">
-        <a href="#home">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About us</a>
         <a href="#menu">Brand</a>
         <a href="#products">Stock</a>
